<resources>
    <string name="app_name">R&amp;D-PVCFC</string>
    <string name="error_message" translatable="false">Can\'t decrease more</string>
    <string name="counter" translatable="false">Counter:</string>
    <string name="counter_default_value" translatable="false">0</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
...
